--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,13 +48,16 @@ services:
       - --config.file=/etc/prometheus/prometheus.yml
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:6.2.2
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.6.2
     container_name: elasticsearch
     environment:
+      - node.name=es01
       - cluster.name=docker-cluster
       - bootstrap.memory_lock=true
       - xpack.security.enabled=false
       - "ES_JAVA_OPTS=-Xmx2048m -Xms2048m"
+      - cluster.initial_master_nodes=es01
+      - discovery.seed_hosts=es01
     volumes:
       - esdata1:/usr/share/elasticsearch/data
     ports:
@@ -66,7 +69,7 @@ services:
         hard: -1
 
   logstash:
-    image: docker.elastic.co/logstash/logstash:6.2.2
+    image: docker.elastic.co/logstash/logstash:8.6.2
     container_name: logstash
     command: logstash -f /etc/logstash/conf.d/logstash.conf
     volumes:
@@ -77,7 +80,7 @@ services:
       - elasticsearch
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:6.2.2
+    image: docker.elastic.co/kibana/kibana:8.6.2
     container_name: kibana
     environment:
       - ELASTICSEARCH_URL=http://elasticsearch:9200
