--- a/pom.xml
+++ b/pom.xml
@@ -12,28 +12,28 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.2</version> <!-- lookup parent from repository -->
+        <version>3.2.3</version> <!-- lookup parent from repository -->
     </parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>17</java.version>
-        <spring-cloud.version>2022.0.1</spring-cloud.version>
+        <spring-cloud.version>2023.0.0</spring-cloud.version>
         <chaos-monkey-spring-boot.version>2.7.0</chaos-monkey-spring-boot.version>
         <testcontainers.version>1.17.6</testcontainers.version>
         <swagger2.version>3.0.0</swagger2.version>
         <logstash-logback.version>4.9</logstash-logback.version>
         <jjwt.version>0.11.5</jjwt.version> 
 
-        <!-- <flyway.url>jdbc:h2:file:./metadb</flyway.url>
+        <flyway.url>jdbc:h2:file:./metadb</flyway.url>
         <flyway.user>sa</flyway.user>
-        <flyway.password></flyway.password> -->
+        <flyway.password></flyway.password> 
 		
 		<!-- Migrate at local -->
-        <flyway.url>jdbc:postgresql://localhost:5432/appdb</flyway.url>
+        <!--<flyway.url>jdbc:postgresql://localhost:5432/appdb</flyway.url>
         <flyway.user>siva</flyway.user>
-        <flyway.password>secret</flyway.password>
+        <flyway.password>secret</flyway.password>-->
 
         <dependency-check-maven-version>8.0.2</dependency-check-maven-version>
     </properties>
@@ -105,10 +105,10 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
-        </dependency>
+		    <groupId>com.mysql</groupId>
+		    <artifactId>mysql-connector-j</artifactId>
+		    <scope>runtime</scope>
+		</dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
@@ -139,7 +139,6 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>postgresql</artifactId>
-            <version>${testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -175,11 +174,11 @@
 		    <version>3.1.0</version>
 		    <scope>provided</scope>
 		</dependency>
-		 <dependency>
-      <groupId>org.springdoc</groupId>
-      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-      <version>2.0.2</version>
-   </dependency>
+		<dependency>
+	      <groupId>org.springdoc</groupId>
+	      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+	      <version>2.0.2</version>
+	   </dependency>
     </dependencies>
 
     <dependencyManagement>
@@ -193,7 +192,8 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
+	
+	
     <build>
         <plugins>
         	<plugin>
@@ -258,5 +258,16 @@
             </plugin>
         </plugins>
     </build>
-
+	<profiles>
+        <profile>
+            <id>jdk-17</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <maven.compiler.source>17</maven.compiler.source>
+                <maven.compiler.target>17</maven.compiler.target>
+            </properties>
+        </profile>
+    </profiles>
 </project>
