--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=meta-api
-spring.profiles.active=local
+# what profile to use
+spring.profiles.active=docker
+
 logging.level.meta.api=debug
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 management.endpoints.web.exposure.include=*
