--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,12 @@
         <testcontainers.version>1.17.6</testcontainers.version>
         <swagger2.version>3.0.0</swagger2.version>
         <logstash-logback.version>4.9</logstash-logback.version>
-        <jjwt.version>0.11.5</jjwt.version> 
+        <jjwt.version>0.11.5</jjwt.version>
+        <modelmapper.version>2.3.9</modelmapper.version>
+        <servlet.version>3.1.0</servlet.version>
+        <springdoc.version>2.0.2</springdoc.version>
 
-        <flyway.url>jdbc:h2:file:./metadb</flyway.url>
+        <flyway.url>jdbc:h2:file:./db/metadb</flyway.url>
         <flyway.user>sa</flyway.user>
         <flyway.password></flyway.password> 
 		
@@ -166,18 +169,18 @@
 		<dependency>
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
-			<version>2.3.9</version>
+			<version>${modelmapper.version}</version>
 		</dependency>
 		<dependency>
 		    <groupId>javax.servlet</groupId>
 		    <artifactId>javax.servlet-api</artifactId>
-		    <version>3.1.0</version>
+		    <version>${servlet.version}</version>
 		    <scope>provided</scope>
 		</dependency>
 		<dependency>
 	      <groupId>org.springdoc</groupId>
 	      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-	      <version>2.0.2</version>
+	      <version>${springdoc.version}</version>
 	   </dependency>
     </dependencies>
 
