--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,4 +1,4 @@
-
+#server.port=18080
 # spring.datasource.driver-class-name=org.postgresql.Driver
 # spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 # spring.datasource.username=postgres
@@ -7,7 +7,7 @@
 # spring.flyway.enabled=true
 # spring.flyway.locations=classpath:/db/migration/{vendor}
 
-spring.datasource.url=jdbc:h2:file:./metadb
+spring.datasource.url=jdbc:h2:file:./db/metadb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
