--- a/pom.xml
+++ b/pom.xml
@@ -29,16 +29,16 @@
         <servlet.version>3.1.0</servlet.version>
         <springdoc.version>2.0.2</springdoc.version>
 
-        <flyway.url>jdbc:h2:file:./db/metadb</flyway.url>
+        <!--<flyway.url>jdbc:h2:file:./db/metadb</flyway.url>
         <flyway.user>sa</flyway.user>
-        <flyway.password></flyway.password> 
+        <flyway.password></flyway.password> -->
 		
 		<!-- Migrate at local -->
         <!--<flyway.url>jdbc:postgresql://localhost:5432/appdb</flyway.url>
         <flyway.user>siva</flyway.user>
         <flyway.password>secret</flyway.password>-->
 
-        <dependency-check-maven-version>8.0.2</dependency-check-maven-version>
+        <dependency-check-maven-version>9.2.0</dependency-check-maven-version>
     </properties>
 
     <dependencies>
@@ -177,11 +177,11 @@
 		    <version>${servlet.version}</version>
 		    <scope>provided</scope>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 	      <groupId>org.springdoc</groupId>
 	      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 	      <version>${springdoc.version}</version>
-	   </dependency>
+	   </dependency>-->
     </dependencies>
 
 <!--    <dependencyManagement>
